export const snapshot = {};

snapshot[`commentTemplate > should transform basic content 1`] = `
# <!-- ={name} -->a new header<!-- {/name} -->

And some other content
`;

snapshot[`commentTemplate > should transform content with multiple lines 1`] = `
# <!-- ={name} -->a new header<!-- {/name} -->

And some other content
`;

snapshot[`commentTemplate > should handle multiple transformations 1`] = `
# <!-- ={name} -->a new header<!-- {/name} -->

And some other <!-- ={adjective} -->awesome<!-- {/adjective} -->content
  this is a <!-- ={size} -->large<!-- {/size} -->.
`;

snapshot[`commentTemplate > should skip content when no variable defined 1`] = `
# <!-- ={name} -->a new header<!-- {/name} -->

And some other <!-- ={adjective} -->awesome<!-- {/adjective} -->content
  this is a <!-- ={size} -->replace me<!-- {/size} -->.
`;

snapshot[`commentTemplate > should support multiline comments 1`] = `
# <!-- 
={name} -->a new header<!-- {/name} -->

And some other <!-- ={adjective}
 -->awesome<!--         {/adjective} -->content
  this is a <!-- ={size} -->small<!-- {/size} -->.
`;

snapshot[`commentTemplate > should support function variables 1`] = `
# <!-- ={name} -->a new header<!-- {/name} -->

And some other <!-- ={adjective} -->awesome<!-- {/adjective} -->content
  this is a <!-- ={size|code:|suffix:" as code"} -->\`em ecalper\`<!-- {/size} -->.
`;

snapshot[`commentTemplate > pipes > string:false 1`] = `<!-- ={test|string:false} -->"a good test"<!-- {/test} -->`;

snapshot[`commentTemplate > pipes > string:true 1`] = `<!-- ={test|string:true} -->'a good test'<!-- {/test} -->`;

snapshot[`commentTemplate > pipes > prefix 1`] = `<!-- ={test|prefix:"not "} -->not a good test<!-- {/test} -->`;

snapshot[`commentTemplate > pipes > suffix 1`] = `<!-- ={test|suffix:", okay..."} -->a good test, okay...<!-- {/test} -->`;

snapshot[`commentTemplate > pipes > codeblock 1`] = `
<!-- ={test|codeblock:""} -->\`\`\`
a good test
\`\`\`<!-- {/test} -->
`;

snapshot[`commentTemplate > pipes > indent 1`] = `<!-- ={test|indent:"  "} -->a good test<!-- {/test} -->`;

snapshot[`commentTemplate > pipes > code 1`] = `<!-- ={test|code:} -->\`a good test\`<!-- {/test} -->`;

snapshot[`commentTemplate > pipes > replace 1`] = `<!-- ={test|replace:"<!--,other"} -->other Hello --><!-- {/test} -->`;
